2022-02-11  Don Olmstead  <don.olmstead@sony.com>

        [CMake] Check for MAP_ALIGNED support
        https://bugs.webkit.org/show_bug.cgi?id=236522

        Reviewed by Keith Miller.

        Add a symbol check for MAP_ALIGNED in the CMake.

        * Source/cmake/OptionsCommon.cmake:

2022-02-11  Adrian Perez de Castro  <aperez@igalia.com>

        [CMake] Use ld.lld by default for development builds where available
        https://bugs.webkit.org/show_bug.cgi?id=235979

        Reviewed by Michael Catanzaro.

        * Source/cmake/OptionsCommon.cmake: Enable USE_LD_LLD by default for developers builds
        when ld.lld is available. While at it, improve the match on LD_VERSION to be more robust.

2022-02-10  Filip Pizlo  <fpizlo@apple.com>

        Unreviewed, add an alternate email address.

        * metadata/contributors.json:

2022-02-10  Elliott Williams  <emw@apple.com>

        [Xcode] Perform a full build when analyzing
        https://bugs.webkit.org/show_bug.cgi?id=236421

        Reviewed by Alexey Proskuryakov.

        `xcodebuild analyze` does just enough work to run the analyzer on each target, and doesn't
        appear to run build phases that only impact consumers of the target. In particular, it
        doesn't copy framework headers.
        
        Fix by telling xcodebuild to build _and_ analyze at once. AFAICT, this is exactly what
        Xcode's Product > Analyze command does.

        * Makefile.shared: s/analyze/build analyze

2022-02-10  Alejandro G. Castro  <alex@igalia.com>

        [GTK][WPE] Improve device detection in the GbmDevice
        https://bugs.webkit.org/show_bug.cgi?id=236436

        Reviewed by Chris Lord.

        * Source/cmake/OptionsGTK.cmake: Search for drm and gbm libraries
        when compiling WebGL ANGLE support.
        * Source/cmake/OptionsWPE.cmake: Ditto.

2022-02-10  Tim Nguyen  <ntim@apple.com>

        Unreviewed, update my (Tim Nguyen) status to reviewer

        * metadata/contributors.json: