@@ -1,3 +1,13 @@
+2022-02-15  Adrian Perez de Castro  <aperez@igalia.com>
+
+        [CMake] Checks uses of execute_process() for correct command splitting
+        https://bugs.webkit.org/show_bug.cgi?id=236366
+
+        Reviewed by Don Olmstead.
+
+        * CMakeLists.txt: string(TIMESTAMP var "%s") has been supported since CMake 3.6, and given
+        that 3.12 is required we can use it instead of shelling out to run the "date" program.
+
 2022-02-14  Yusuke Suzuki  <ysuzuki@apple.com>
 
         `Array#{ groupBy, groupByToMap }` should throw a `TypeError` when `this` is `null` or `undefined`
